Added shade plugin to add dependencies to the jar.
(Not with javafx classes though :( )