@@ -1,1 +1,6 @@
 An equivalent to ![tool-7zip-compress-encrypt](https://github.com/ferigeek/tool-7zip-compress-encrypt).
+
+After downloading javafx:
+```
+java --module-path path/to/javafx/lib --add-modules javafx.controls,javafx.fxml -jar output.jar
+```
